inbox dark mode, student home fixes

--- a/css/stu_home_styles.css
+++ b/css/stu_home_styles.css
@@ -180,6 +180,7 @@ hr {
   width: 200px;
   max-height: 500px; /* Ensure height is unrestricted */
   padding: 15px;
+  font-size: 14px;
   border-radius: 17px;
 }
 
@@ -634,6 +635,7 @@ hr {
   border-radius: 12px; 
   max-width: 100%; 
   overflow-x: auto; 
+  margin-bottom: 20px;
 }
 
 .table-wrapper {
@@ -770,11 +772,11 @@ h2#addToListModalLabel {
 .modal-header,
 .modal-footer {
   border: none;
-  padding: 0 0 30px 0; /* Removes the border */
+  padding: 0 0 20px 0; /* Removes the border */
 }
 
 .modal-footer{
-  padding-top: 30px;
+  padding-top: 0;
   padding-bottom: 0;
 }
 
@@ -1037,6 +1039,9 @@ input{
   font-size: 14px;
 }
 
+.dropdown-menu #courseOptions {
+  font-size: 14px;
+}
 
 /* Make the dropdown menu scrollable */
 #courseOptions {
@@ -1291,6 +1296,9 @@ input{
     filter: invert(1);
 }
 
+.dropdown-menu #courseOptions .dropdown-item:hover {
+  background-color: #a5a5a5;
+}
 
 
 }
